src/hhccia-v2/hhccia-guardia-pediatria-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hhccia-guardia-pediatria-ui-ingress
  namespace: hhccia-v2
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: "guardia-pediatria.irupeconsultores.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hhccia-guardia-pediatria-ui
                port:
                  number: 8080
